classDiagram

direction RL

namespace pk_projets {
class Projet
class Tâche
}
namespace pkg_realisation_projet {


  class Livrable {
    id: int
    titre: string
    lien: string
    description: text
  }

   class NatureLivrable {
    id: int
    nom: string
    description: text
  }

  class Message {
    id: int
    titre: string
    description: text
  }

}

Projet "1" --> "*" Livrable
Livrable "*" --> "1" NatureLivrable
Message "*"--> "1" Tâche
Message "*"--> "1" Projet

